fix: CR baseline alignment (#1467)
* Fixed text alignment in table.

* Fixed baseline alignment.

--- a/assets/css/v2/pre_fare/cr_departures.scss
+++ b/assets/css/v2/pre_fare/cr_departures.scss
@@ -1,7 +1,7 @@
 .departures-container {
   font-family: Inter, sans-serif;
   height: 100%;
-  background-color: #ED8B00;
+  background-color: #ed8b00;
   padding: 32px;
 }
 .departures-card {
@@ -37,7 +37,6 @@
 .departures-card__body {
   background-color: #ebeae8;
   height: 1016px;
-  padding: 4px 44px 74px 44px;
   box-sizing: border-box;
   table {
     border-collapse: collapse;
@@ -45,10 +44,10 @@
     table-layout: fixed;
     td {
       border-bottom: 4px solid #cccbc8;
-      padding: 30px 25px;
+      padding: 30px 0;
     }
     .wayfinding-arrow-column {
-      width: 56px;
+      width: 216px;
     }
     .headsign-column {
       width: 400px;
@@ -65,7 +64,8 @@
       font-weight: 800;
       text-align: right;
     }
-    .track, .track-column {
+    .track,
+    .track-column {
       padding-left: 60px;
       font-size: 56px;
     }
@@ -94,7 +94,12 @@
 }
 .departures-card__footer {
   height: 376px;
-  padding: 24px 40px 76px 40px;
+  .departures-card__time-to-destination {
+    margin-left: 96px;
+  }
+  .departures-card__footer-ride-free {
+    margin-left: 96px;
+  }
   .departures-card__footer__clock-icon-container {
     height: 56px;
     width: 56px;
@@ -116,16 +121,20 @@
 
 .departures-card__info-row {
   display: flex;
-  padding-top: 34px;
+  padding-top: 52px;
   .small-svg {
     height: 56px;
     width: 56px;
-    margin: 0 96px 0 24px;
+    margin-left: 64px;
+    &.clock-icon {
+      margin-left: 64px;
+    }
     &.free-cr {
       fill: #00843d;
     }
   }
   .departures-card__info-text {
     width: 732px;
+    margin-left: 92px;
   }
 }
